--- a/FSIWebApp2/Components/Layout/NavMenu.razor
+++ b/FSIWebApp2/Components/Layout/NavMenu.razor
@@ -31,6 +31,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="query-builder">
+                <span class="bi bi-search-nav-menu" aria-hidden="true"></span> Query Builder
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="filemakerreferences">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> FileMaker Reference
             </NavLink>
